Add router and move js docs from index.ts to router
